@@ -20,6 +20,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19157: Include the broadcast address in the usuable hosts for IPv6
+  in ipaddress.
+
 - Issue #20875: Prevent possible gzip "'read' is not defined" NameError.
   Patch by Claudiu Popa.
 
